other test clean up